--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = "simple module to call subprocesses and log the output"
 authors = ["MadMcCrow <do-not-mail.me@please.com>"]
 packages = [{include = "pycall"}]
-readme = "README.md"
+# relative path does not work. readme is in parent folder
+# readme = "../../docs/README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
